Updated Project Links

--- a/Resume/resume.html
+++ b/Resume/resume.html
@@ -89,8 +89,9 @@
     </section>
 
     <h2>Relevant Projects</h2>
-    <a href="https://github.com/tjongleonardo/Resume/KnightMaps">Human Computer Interaction - KnightMaps</a><br>
-    <a href="https://github.com/tjongleonardo/Resume/NileGUI">Simple Gui</a>
+    <a href="https://tjongleonardo.github.io/Resume/KnightMaps.html">Human Computer Interaction - KnightMaps</a><br>
+    <a href="https://tjongleonardo.github.io/Resume/NileGUI.html">Simple Gui</a>
+    
 
   </main>
 </body>
