--- a/Resume/resume.html
+++ b/Resume/resume.html
@@ -89,8 +89,8 @@
     </section>
 
     <h2>Relevant Projects</h2>
-    <a href="https://tjongleonardo.github.io/Resume/KnightMaps.html">Human Computer Interaction - KnightMaps</a><br>
-    <a href="https://tjongleonardo.github.io/Resume/NileGUI.html">Simple Gui</a>
+    <a href="KnightMaps.html">Human Computer Interaction - KnightMaps</a><br>
+    <a href="NileGUI.html">Simple Gui</a>
     
 
   </main>
