Added images to source

--- a/Resume/KnightMaps.html
+++ b/Resume/KnightMaps.html
@@ -27,6 +27,15 @@
       </section>
       <section id="Images">
         <h2>Images</h2>
+         <figure>
+           <img src="Images/KnightMaps.png" alt="Image depicting KnightMaps Showcase." width="1800px">
+           <figcaption>Image depicting KnightMaps Showcase.</figcaption>
+         </figure>
+
+        <figure>
+          <img src="Images/KnightMaps2.png" alt="Image depicting KnightMaps Showcase." width="1800px">
+          <figcaption>Image depicting KnightMaps Showcase.</figcaption>
+        </figure>
           
         
 
