Added images to source

--- a/Resume/NileGUI.html
+++ b/Resume/NileGUI.html
@@ -25,7 +25,14 @@
       </section>
       <section id="Images">
           <h2>Images</h2>
-          
+          <figure>
+            <img src="Images/NileGui.png" alt="Nile.com main ordering screen">
+            <figcaption>Main ordering interface.</figcaption>
+          </figure>
+          <figure>
+            <img src="Images/NileT.png" alt="Nile.com transaction output">
+            <figcaption>Transaction view.</figcaption>
+          </figure>
       </section>
 
       <section id="features">
