--- a/Resume/NileGUI.html
+++ b/Resume/NileGUI.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Nile.com (NileDotCom) — GUI Project Showcase</title>
 </head>
 
