--- a/CIS4004/Resume/resume.html
+++ b/CIS4004/Resume/resume.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Leonardo Tjong - Resume</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -14,10 +16,10 @@
         <a href="mailto:le559549@ucf.edu">le559549@ucf.edu</a>
       <p>
 
-        <a href="https://www.credly.com/users/leonardo-tjong">Credly</a>
-        - <a href="https://github.com/tjongleonardo">GitHub</a> - <a href="https://www.linkedin.com/in/leonardo-tjong-90444035a/">LinkedIn</a>
+        <a href="https://www.credly.com/users/leonardo-tjong">Credly</a>- <a href="https://github.com/tjongleonardo">GitHub</a>- <a href="https://www.linkedin.com/in/leonardo-tjong-90444035a/">LinkedIn</a>
       </p>
     </address>
+    <hr />
   </header>
 
   <main>
@@ -85,12 +87,12 @@
         <li>Security in Computing</li>
       </ul>
     </section>
-
-    <h2>Relevant Projects</h2>
-    <a href="KnightMaps.html">Human Computer Interaction - KnightMaps</a><br>
-    <a href="NileGUI.html">Simple Gui</a>
-    
-
+    <section>
+      <h2>Relevant Projects</h2>
+      <a href="https://tjongleonardo.github.io/CIS4004/Resume/KnightMaps.html">Human Computer Interaction - KnightMaps</a><br>
+      <a href="https://tjongleonardo.github.io/CIS4004/Resume/NileGUI.html">Simple Gui</a>
+    </section>
+      
   </main>
 </body>
 </html>
